[package]
name       = "ibc-relayer-cli"
version    = "0.13.0"
edition    = "2021"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
homepage   = "https://hermes.informal.systems/"
repository = "https://github.com/informalsystems/ibc-rs"
authors    = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.60"
description  = """
  Hermes is an IBC Relayer written in Rust
"""
default-run = "hermes"

[[bin]]
name = "hermes"

[features]
default     = ["telemetry", "rest-server", "std", "eyre_tracer",]
std         = ["flex-error/std"]
eyre_tracer = ["flex-error/eyre_tracer"]
profiling   = ["ibc-relayer/profiling"]
telemetry   = ["ibc-relayer/telemetry", "ibc-telemetry"]
rest-server = ["ibc-relayer-rest"]

[dependencies]
ibc              = { version = "0.13.0", path = "../modules", features = ["std", "clock"] }
ibc-relayer      = { version = "0.13.0", path = "../relayer" }
ibc-proto        = { version = "0.17.0", path = "../proto" }
ibc-telemetry    = { version = "0.13.0", path = "../telemetry", optional = true }
ibc-relayer-rest = { version = "0.13.0", path = "../relayer-rest", optional = true }

clap = { version = "3.1", features = ["cargo"] }
clap_complete = "3.1"
humantime = "2.1"
serde = { version = "1.0", features = ["serde_derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter", "json"]}
eyre = "0.6.8"
color-eyre = "0.6"
oneline-eyre = "0.1"
futures = "0.3.21"
toml = "0.5.9"
serde_derive = "1.0.116"
serde_json = "1"
prost = { version = "0.9" }
prost-types = { version ="0.9" }
hex = "0.4"
crossbeam-channel = "0.5.4"
subtle-encoding = "0.5"
dirs-next = "2.0.0"
itertools = "0.10.3"
atty = "0.2.14"
flex-error = { version = "0.4.4", default-features = false, features = ["std", "eyre_tracer"] }
signal-hook = "0.3.13"
dialoguer = "0.10.0"
console = "0.15.0"

[dependencies.tendermint-proto]
version = "=0.23.6"

[dependencies.tendermint]
version = "=0.23.6"
features = ["secp256k1"]

[dependencies.tendermint-rpc]
version = "=0.23.6"
features = ["http-client", "websocket-client"]

[dependencies.tendermint-light-client]
version = "=0.23.6"
features = ["unstable"]

[dependencies.tendermint-light-client-verifier]
version = "=0.23.6"

[dependencies.abscissa_core]
version = "=0.6.0"
features = ["options"]

[dev-dependencies]
abscissa_core = { version = "=0.6.0", features = ["testing"] }
once_cell = "1.9"
regex = "1.5"
