[package]
name         = "ibc-relayer-framework-guide"
version      = "0.17.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.60"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
async-trait = "0.1.56"
ibc             = { version = "0.17.0", path = "../modules" }
ibc-relayer     = { version = "0.17.0", path = "../relayer" }
ibc-relayer-cosmos      = { version = "0.17.0", path = "../relayer-cosmos" }
ibc-relayer-framework   = { version = "0.17.0", path = "../relayer-framework" }
