[package]
name       = "ibc-relayer-rest"
version    = "0.1.0"
authors    = ["Informal Systems <hello@informal.systems>"]
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["ibc", "rest", "api", "cosmos", "tendermint"]
homepage   = "https://hermes.informal.systems/"
repository = "https://github.com/informalsystems/ibc-rs"

description = """
  Rust implementation of a RESTful API server for Hermes.
"""

[dependencies]
ibc               = { version = "0.7.0", path = "../modules" }
ibc-relayer       = { version = "0.7.0", path = "../relayer" }

crossbeam-channel = { version = "0.5" }
rouille           = { version = "3.1" }
tracing           = { version = "0.1" }

[dev-dependencies]
serde = "1.0.127"
serde_json = "1.0.66"
toml = "0.5.8"
ureq = "2.1.1"
