[package]
name         = "ibc-relayer-rest"
version      = "0.9.0"
authors      = ["Informal Systems <hello@informal.systems>"]
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["ibc", "rest", "api", "cosmos", "tendermint"]
homepage     = "https://hermes.informal.systems/"
repository   = "https://github.com/informalsystems/ibc-rs"
rust-version = "1.57"
description  = """
  Rust implementation of a RESTful API server for Hermes
"""

[dependencies]
ibc               = { version = "0.9.0", path = "../modules" }
ibc-relayer       = { version = "0.9.0", path = "../relayer" }

crossbeam-channel = "0.5"
rouille           = "3.4"
serde             = "1.0.131"
tracing           = "0.1"

[dev-dependencies]
serde_json = "1.0.72"
toml       = "0.5.8"
ureq       = "2.3.1"
