[package]
name = "relayer-spike"
version = "0.1.0"
authors = ["Sean Braithwaite <brapse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.2"
anomaly = "0.2.0"
thiserror = "1.0.15"
retry = "1.1.0"
