[package]
name       = "ibc-relayer-test"
version    = "0.6.1"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
homepage   = "https://hermes.informal.systems/"
repository = "https://github.com/informalsystems/ibc-rs"
authors    = ["Informal Systems <hello@informal.systems>"]

description = """
  End-to-end tests for IBC Relayer
"""

[dependencies]
ibc           = { version = "0.6.1", path = "../modules" }
ibc-relayer   = { version = "0.6.1", path = "../relayer" }
ibc-relayer-cli   = { version = "0.6.1", path = "../relayer-cli" }
ibc-proto     = { version = "0.9.0", path = "../proto" }
ibc-telemetry = { version = "0.6.1", path = "../telemetry", optional = true }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
eyre = "0.6.5"
color-eyre = "0.5"
rusty-fork = "0.3.0"
