[package]
name       = "ibc-relayer-test"
version    = "0.8.0-pre.1"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
homepage   = "https://hermes.informal.systems/"
repository = "https://github.com/informalsystems/ibc-rs"
authors    = ["Informal Systems <hello@informal.systems>"]

description = """
  End-to-end tests for IBC Relayer
"""

[dependencies]
ibc           = { path = "../modules" }
ibc-relayer   = { path = "../relayer" }
ibc-relayer-cli   = { path = "../relayer-cli" }
ibc-proto     = { path = "../proto" }
ibc-telemetry = { path = "../telemetry", optional = true }
tendermint = { version = "=0.23.0-internal" }
tendermint-rpc = { version = "=0.23.0-internal", features = ["http-client", "websocket-client"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
eyre = "0.6.5"
color-eyre = "0.5"
rusty-fork = "0.3.0"
rand = "0.8.4"
test-env-log = "0.2.7"
env_logger = "0.9.0"
hex = "0.4.3"
serde = "1.0.130"
serde_json = "1"
itertools = "0.10"
toml = "0.5"
subtle-encoding = "0.5.1"
sha2 = "0.9.8"
crossbeam-channel = "0.5.1"
prost-types = { version = "0.9", default-features = false }
