[package]
name         = "ibc-relayer"
version      = "0.13.0-rc.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.58"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[package.metadata.docs.rs]
all-features = true

[features]
default   = ["flex-error/std", "flex-error/eyre_tracer"]
profiling = []
telemetry = ["ibc-telemetry"]

[dependencies]
ibc           = { version = "0.13.0-rc.0", path = "../modules" }
ibc-proto     = { version = "0.16.0", path = "../proto", default-features = false, features = ["tonic", "client"] }
ibc-telemetry = { version = "0.13.0-rc.0", path = "../telemetry", optional = true }

subtle-encoding = "0.5"
humantime-serde = "1.1.1"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0.30"
toml = "0.5"
tracing = "0.1.32"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync"] }
serde_json = { version = "1" }
bytes = "1.1.0"
prost = { version = "0.9" }
prost-types = { version = "0.9" }
futures = "0.3.21"
crossbeam-channel = "0.5.4"
k256 = { version = "0.11.0-pre.0", features = ["ecdsa-core", "ecdsa", "sha256"]}
hex = "0.4"
bitcoin = { version = "=0.27", features = ["use-serde"] }
tiny-bip39 = "0.8.0"
hdpath = { version = "0.6.0", features = ["with-bitcoin"] }
sha2 = "0.10.2"
tiny-keccak = { version = "2.0.2", features = ["keccak"], default-features = false }
ripemd160 = "0.9.1"
bech32 = "0.8.1"
itertools = "0.10.3"
tonic = { version = "0.6", features = ["tls", "tls-roots"] }
dirs-next = "2.0.0"
retry = { version = "1.3.1", default-features = false }
async-stream = "0.3.3"
http = "0.2.6"
flex-error = { version = "0.4.4", default-features = false }
signature = "1.4.0"
anyhow = "1.0"
semver = "1.0"
uint = "0.9"
humantime = "2.1.0"
nanoid = "0.4.0"
regex = "1.5.5"
moka = "0.7.2"

tendermint-proto = { git = "https://github.com/Wizdave97/tendermint-rs.git", branch = "david/no_std-and-std-targets" }
tendermint = { git = "https://github.com/Wizdave97/tendermint-rs.git", branch = "david/no_std-and-std-targets", features = ["secp256k1"] }
tendermint-rpc = { git = "https://github.com/Wizdave97/tendermint-rs.git", branch = "david/no_std-and-std-targets", features = ["http-client", "websocket-client"] }
tendermint-light-client = { git = "https://github.com/Wizdave97/tendermint-rs.git", branch = "david/no_std-and-std-targets", features = ["unstable"] }
tendermint-light-client-verifier = { git = "https://github.com/Wizdave97/tendermint-rs.git", branch = "david/no_std-and-std-targets" }
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4.0", features = ["num-bigint", "serde"] }
tendermint-rpc-abci = { git = "https://github.com/Wizdave97/tendermint-rs.git", branch = "david/no_std-and-std-targets" }

[dev-dependencies]
ibc = { version = "0.13.0-rc.0", path = "../modules", features = ["mocks"] }
serial_test = "0.6.0"
env_logger = "0.9.0"
tracing-subscriber = { version = "0.3.9", features = ["fmt", "env-filter", "json"] }
test-log = { version = "0.2.8", features = ["trace"] }

# Needed for generating (synthetic) light blocks.
tendermint-testgen = { git = "https://github.com/Wizdave97/tendermint-rs.git", branch = "david/no_std-and-std-targets" }
