[package]
name         = "ibc-telemetry"
version      = "0.13.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["cosmos", "ibc", "relayer", "telemetry"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.60"
description  = """
    Telemetry service for the Hermes IBC relayer
"""

[dependencies]
ibc = { version = "0.13.0", path = "../modules" }

crossbeam-channel        = "0.5.4"
once_cell                = "1.9.0"
opentelemetry            = "0.17.0"
opentelemetry-prometheus = "0.10.0"
prometheus               = "0.13.0"
rouille                  = "3.5.0"
