[package]
name = "tx-msgsend"
version = "0.1.0"
authors = ["Andy Nogueira <me@andynogueira.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-types = "0.6.1"
prost = "0.6.1"
# Signatory
#signatory-secp256k1 = "0.20.0"
#signature = "1.2.0"
#ecdsa = { version = "0.6", features = ["k256"]}
k256 = { version = "0.5", features = ["ecdsa", "ecdsa-core", "sha256"] }
ripemd160 = { version = "0.9", optional = true }
sha2 = { version = "0.9.1", default-features = false }
rust-crypto = "0.2.36"
tendermint = "0.16.0"
secp256k1 = "0.19.0"
ed25519-dalek = "1.0.0"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
rand_core = "0.5"
hex = "0.4"
