[package]
name = "no-std-check"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
ibc = { path = "../../modules", default-features = false }
ibc-proto = { path = "../../proto", default-features = false }
tendermint = { git = "https://github.com/Wizdave97/tendermint-rs.git", branch = "david/no_std-and-std-targets", default-features = false }
tendermint-proto = { git = "https://github.com/Wizdave97/tendermint-rs.git", branch = "david/no_std-and-std-targets", default-features = false }
tendermint-light-client-verifier = { git = "https://github.com/Wizdave97/tendermint-rs.git", branch = "david/no_std-and-std-targets", default-features = false }

sp-core = { version = "5.0.0", default-features = false, optional = true }
sp-io = { version = "5.0.0", default-features = false, optional = true }
sp-runtime = { version = "5.0.0", default-features = false, optional = true }
sp-std = { version = "4.0.0", default-features = false, optional = true }

[features]
panic-handler = []
use-substrate = [
  "sp-core",
  "sp-io",
  "sp-runtime",
  "sp-std",
]
substrate-std = [
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "ibc-proto/std",
  "ibc/std",
  "tendermint/std",
  "tendermint-proto/std",
  "tendermint-light-client-verifier/std"
]

[patch.crates-io]
tendermint                        = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }
tendermint-proto                  = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }
tendermint-light-client-verifier  = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }
